--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+spring.mvc.hiddenmethod.filter.enabled=true
