--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=codestagram
 spring.mustache.suffix=.html
 spring.mustache.cache=false
+spring.mvc.hiddenmethod.filter.enabled=true
