--- a/build.gradle
+++ b/build.gradle
@@ -18,17 +18,11 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.withType(JavaCompile) {
-	options.compilerArgs << "-parameters"
-}
-
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
