--- a/application.yaml
+++ b/application.yaml
@@ -12,6 +12,7 @@ spring:
   jpa:
     generate-ddl: 'true'
     database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
     properties:
