--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 spring.application.name=codestagram
+
+# Hidden Method
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# Data Source Setting
+spring.datasource.url=jdbc:h2:file:./spring-cafe
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=mud
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JPA Setting
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.show-sql=true
