--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=codestagram
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# H2 ?????? ??
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 ?? ??? (? ?????? DB ?? ??)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
