--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,3 +10,8 @@ spring:
     url: jdbc:h2:tcp://localhost/~/spring-cafe
     driver-class-name: org.h2.Driver
     username: sa
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
