[케이딘] step4 글 쓰기 기능 구현 (#34)
* refactor: qna 이동

* feat: ArticleRpository 구현

게시글에 대한 레포지토리 생성

* feat: Article 클래스 생성

* refactor: index.html 수정

* refactor: MvcConfig 클래스 수정

* feat: ArticleController 클래스 생성

* feat: ArticleService 클래스 생성

게시글 관련 서비스를 담당하는 서비스 클래스 구현

* feat: MainController 클래스 생성

* refactor: User 관련 변수들 이름 변경

* feat: 특정 게시글 조회 메서드 추가

* feat: ArticleController 생성자로 의존성 주입

* 변경 사항 업데이트

* 변경 사항 업데이트

* 변경사항 업데이트

* remove: 불필요한 파일 삭제

* refactor: 게시글 관련 메서드 이름, 매개변수 변경

* refactor: show.html 변경

게시글 목록을 보여줄 수 있도록 변경

* refactor: UserController 수정

create() 로직 수정

* refactor: ArticleController 수정

ask 로직 수정

* refactor: style 변경

* refactor: User 생성자 추가

* refactor: Article 수정

생성자 추가, id 필드 추가

* feat: MainController 클래스 구현

첫 화면을 담당하는 컨트롤러 구현

* refactor: index.html 수정

* fix: html 파일들의 css, style 참조 수정

* refactor: show.html 수정

* refactor: 게시글의 id 관련 참조들 수정

* refactor: 첫 화면 참조 수정

* feat: ArticleController 수정

각 게시글을 클릭하면 show.html 로 연결되도록 로직 수정

* remove: DS_Store 파일 제거

* feat: Spring 필터 활성화

HTML<form> 에서도 PUT, DELETE 요청을 사용할 수 있도록 스프링 필터 활성화

* refactor: list.html 의 수정 버튼 연결로직 수정

* refactor: index.html 수정

* feat: updateForm.html 구현

회원 정보를 업데이트하는 파일 구현

* feat: UserController 클래스 수정

회원 정보를 수정하는 get, put 요청을 처리할 수 있는 로직 구현

---------

Co-authored-by: 심재연 <jaeyeonsim@simjaeyeon-ui-MacBookPro.local>

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# macOS Finder 설정 파일 (무시해야 함)
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
+.DS_Store
