--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/springcafe
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
