--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=codestagram
 spring.mustache.suffix=.html
 spring.mustache.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
-`
+logging.level.org.springframework.web=DEBUG
+
 # H2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
