feat: 세션 ID 관리 방식 설정 추가
- 세션 ID를 쿠키 저장 방식으로만 작동하도록 설정했습니다.
- 로그아웃 시 제 로그인했을 때 세션 ID 관리 방식이 URL 재작성 방식으로 전환되는 것을 방지하기 위해 설정했습니다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,17 @@ spring.application.name=codestagram
 spring.mvc.hiddenmethod.filter.enabled=true
 
 # Data Source Setting
-spring.datasource.url=jdbc:h2:file:./spring-cafe
+spring.datasource.url=jdbc:h2:file:./data/spring-cafe
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=mud
 spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # JPA Setting
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
-spring.jpa.properties.hibernate.show-sql=true
+
+# H2 Console Setting
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+server.servlet.session.tracking-modes=cookie
