--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=codestagram
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
 
 # H2 ?????? ??
 spring.datasource.url=jdbc:h2:mem:testdb
