--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.mustache.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:file:./data/demo-db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
