최초 로그인시 jsessionid url 출력기능 삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 session.setMaxInactiveInterval(1800);
+
+server.servlet.session.tracking-modes=cookie
