--- a/application.yaml
+++ b/application.yaml
@@ -1,22 +1,16 @@
 spring:
-  h2:
-    console:
-      enabled: true  # H2 Console을 사용할지 여부 (H2 Console은 H2 Database를 UI로 제공해주는 기능)
-      path: /h2-console  # H2 Console의 Path
-  # Database Setting Info (Database를 H2로 사용하기 위해 H2연결 정보 입력)
   datasource:
-    driver-class-name: org.h2.Driver
-    url: 'jdbc:h2:mem:test'
-    username: sa
-    password:
+    url: jdbc:mysql://localhost:3306/codestagram?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: springuser
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     generate-ddl: 'true'
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
         show_sql: true
