--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	// H2
-	runtimeOnly 'com.h2database:h2'
+	// MySQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
