--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,32 +1,3 @@
 spring:
-  application:
-    name: codestargram
-
-  thymeleaf:
-    prefix: classpath:/templates/
-    suffix: .html
-
-  mvc:
-    hidden-method:
-      filter:
-        enabled: true
-
-  h2:
-    console:
-      enabled: true  # H2 콘솔 활성화
-      path: /h2-console  # H2 웹 콘솔 URL 설정
-  datasource:
-    url: jdbc:h2:mem:codestargram  # 메모리 모드 (임시 데이터베이스)
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update  # 자동으로 테이블 생성 및 업데이트
-    show-sql: true  # 실행되는 SQL을 콘솔에 출력
-
-server:
-  servlet:
-    session:
-      tracking-modes: cookie
+  profiles:
+    active: dev
