--- a/application.yaml
+++ b/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/codestagram?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/codestagram?serverTimezone=UTC&characterEncoding=UTF-8
     username: springuser
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
