--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -3,12 +3,10 @@ spring.mustache.suffix=.html
 spring.mustache.cache=true
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
 
-spring.datasource.url=jdbc:h2:file:/h2-data/demo-db
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
