--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ spring.mustache.suffix=.html
 spring.mustache.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:file:./data/demo-db
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+# MySQL ??
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# JPA ??
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
