--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,12 +1,12 @@
-spring.application.name=codestagram
-spring.mustache.suffix=.html
-spring.mustache.cache=true
-spring.mvc.hiddenmethod.filter.enabled=true
-
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=1234
-
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+#spring.application.name=codestagram
+#spring.mustache.suffix=.html
+#spring.mustache.cache=true
+#spring.mvc.hiddenmethod.filter.enabled=true
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=update
