--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,8 +5,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 # MySQL ??
 spring.datasource.url=jdbc:mysql://localhost:3306/proddb
-spring.datasource.username=prod_user
-spring.datasource.password=Super_secret1
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA ??
 spring.jpa.show-sql=true
