--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # MySQL ??
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA ??
 spring.jpa.show-sql=true
