--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,8 +4,7 @@ spring.mustache.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
 # MySQL ??
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/proddb
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
